welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:5: error: not found: value estSurBuggle
  if (estSurBuggle()==true){
      ^Poucet:6: error: not found: value nbBuggle
    nbBuggle=nbBuggle+1
    ^Poucet:8: error: not found: value nbBuggle
  if (nbBuggle<3){
      ^Poucet:11: error: not found: value nbBuggle
  if (nbBuggle>=3)
      ^Poucet:13: error: reassignment to val
  nbPas=nbPas+1
       ^